Introduce PlatformReleaseCategory
Set origins